# poker

./: .gitignore  CMakeLists.txt  README.md  startGame.bat  startGame.sh
src/: card.cpp  card.h  comparer.cpp  comparer.h  deck.cpp  deck.h  hand.cpp  hand.h  main.cpp  playerAI.cpp  playerAI.h  ui.cpp  ui.h
